console-experience/src-tauri/build_output_20.txt
    Checking windows v0.52.0
   Compiling console-experience v0.1.0 (C:\Users\diabl\OneDrive\Documentos\shell_game\console-experience\src-tauri)
    Checking gilrs-core v0.5.15
    Checking sysinfo v0.30.13
    Checking gilrs v0.10.10
error[E0277]: the trait bound `IVectorView<Gamepad>: std::default::Default` is not satisfied
  --> src\adapters\gamepad_adapter.rs:17:48
   |
17 |             let gamepads = Gamepad::Gamepads().unwrap_or_default();
   |                                                ^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `IVectorView<Gamepad>`
   |
note: required by a bound in `Result::<T, E>::unwrap_or_default`
  --> /rustc/254b59607d4417e9dffbc307138ae5c86280fe4c\library\core\src\result.rs:1265:5

For more information about this error, try `rustc --explain E0277`.
error: could not compile `console-experience` (lib) due to 1 previous error
